--- a/app/views/decidim/privacy/privacy_settings/show.html.erb
+++ b/app/views/decidim/privacy/privacy_settings/show.html.erb
@@ -1,6 +1,18 @@
 <% add_decidim_page_title(t("privacy_settings", scope: "layouts.decidim.user_profile")) %>
 <% content_for(:subtitle) { t("privacy_settings", scope: "layouts.decidim.user_profile") } %>
 <%= form_for(@privacy_settings, url: privacy_settings_path, method: :put, class: "user-form") do |f| %>
+  <% if Decidim::Privacy.anonymity_enabled %>
+    <%= t(".profile_publicity_intro_anonymous_html") %>
+      <div class="switch tiny switch-with-label notifications_from_followed">
+        <%= f.label :anonymity do %>
+          <%= f.check_box :anonymity, label: false, class: "switch-input" %>
+          <span class="switch-paddle"></span>
+          <span class="switch-label"><%= t(".enable_anonymity") %></span>
+        <% end %>
+      </div>
+  <% else %>
+    <%= t(".profile_publicity_intro_private_html") %>
+  <% end %>
   <%= t(".profile_publicity_html") %>
   <div class="switch tiny switch-with-label notifications_from_followed">
     <%= f.label :published_at do %>
@@ -30,3 +42,6 @@
   <%= f.submit t(".save_privacy_settings") %>
 <% end %>
 <%= javascript_pack_tag "decidim_privacy_settings" %>
+<% if Decidim::Privacy.anonymity_enabled %>
+  <%= javascript_pack_tag "decidim_anonymity_settings" %>
+<% end %>
