--- a/app/views/decidim/proposals/proposals/_linked_proposals.html.erb
+++ b/app/views/decidim/proposals/proposals/_linked_proposals.html.erb
@@ -1,3 +1,5 @@
+<% anonymous_user = Decidim::Privacy::PrivateUser.new %>
+
 <div class="card card--action card--list">
   <% resources.each do |proposal| %>
     <div class="card--list__item">
@@ -18,6 +20,15 @@
                 <span class="author__name">
                   <strong><%= proposal.author.name %></strong>
                   <%= proposal.author.nickname %>
+                </span>
+              </div>
+            <% else %>
+              <div class="author">
+                <span class="author__avatar">
+                  <%= image_tag anonymous_user.default_avatar_url %>
+                </span>
+                <span class="author__name">
+                  <strong><%= anonymous_user.name %></strong>
                 </span>
               </div>
             <% end %>
