--- a/app/cells/decidim/comments/comment/show.erb
+++ b/app/cells/decidim/comments/comment/show.erb
@@ -22,16 +22,28 @@
           </div>
         </div>
       <% else %>
-        <span>
-          <%= time_tag created_at, l(created_at, format: :decidim_short) %>
-        </span>
-        <% if edited? %>
-          <div class="author-data__extra">
-            <span class="comment__edited">
-              <%= t("decidim.components.comment.edited") %>
-            </span>
+        <div class="author-data">
+          <div class="author-data__main">
+            <div class="author author--inline">
+              <span class="author__avatar">
+                <%= image_tag anonymous_user.default_avatar_url %>
+              </span>
+              <span class="author__name">
+                <%= t("decidim.privacy.private_account.unnamed_user") %>
+              </span>
+              <span>
+                <%= time_tag created_at, l(created_at, format: :decidim_short) %>
+              </span>
+              <% if edited? %>
+                <div class="author-data__extra">
+                  <span class="comment__edited">
+                    <%= t("decidim.components.comment.edited") %>
+                  </span>
+                </div>
+              <% end %>
+            </div>
           </div>
-        <% end %>
+        </div>
       <% end%>
       <%= render :utilities %>
     </div>
