--- a/app/views/decidim/privacy/privacy_settings/show.html.erb
+++ b/app/views/decidim/privacy/privacy_settings/show.html.erb
@@ -3,6 +3,18 @@
   <% content_for(:subtitle) { t("privacy_settings", scope: "layouts.decidim.user_profile") } %>
 
   <%= form_for(@privacy_settings, url: privacy_settings_path, method: :put, class: "user-form") do |f| %>
+    <% if Decidim::Privacy.anonymity_enabled %>
+      <%= t(".profile_publicity_intro_anonymous_html") %>
+      <div class="switch tiny switch-with-label notifications_from_followed">
+        <%= f.label :anonymity do %>
+          <%= f.check_box :anonymity, label: false, class: "switch-input" %>
+          <span class="switch-paddle"></span>
+          <span class="switch-label"><%= t(".enable_anonymity") %></span>
+        <% end %>
+      </div>
+    <% else %>
+      <%= t(".profile_publicity_intro_private_html") %>
+    <% end %>
     <%= t("profile_publicity_html", scope: "decidim.privacy.privacy_settings.show") %>
     <div class="form__wrapper pt-4">
       <label>
@@ -84,7 +96,13 @@
         </div>
       </div>
     </div>
+
     <%= f.submit t(".save_privacy_settings"), class: "button button__sm md:button__lg button__secondary mr-auto !ml-0" %>
   <% end %>
+
   <%= append_javascript_pack_tag "decidim_privacy_settings" %>
+
+  <% if Decidim::Privacy.anonymity_enabled %>
+    <%= javascript_pack_tag "decidim_anonymity_settings" %>
+  <% end %>
 <% end %>
