Add help text to proposal creation as yourself or user group if anonymous / Fix author cell styles

--- a/app/cells/decidim/author/unnamed_user.erb
+++ b/app/cells/decidim/author/unnamed_user.erb
@@ -1,8 +1,8 @@
-<div class="author author--inline">
+<div class="author__container">
   <% if (url = model.try(:default_avatar_url)).present? %>
-    <span class="author__avatar">
+    <%= content_tag :span, class: "author__avatar-container" do %>
       <%= image_tag url, alt: t("decidim.author.avatar", name: decidim_sanitize(author_name)) %>
-    </span>
+    <% end %>
   <% end %>
 
   <span class="author__name">
