--- a/app/cells/decidim/author/unnamed_user.erb
+++ b/app/cells/decidim/author/unnamed_user.erb
@@ -1,11 +1,9 @@
 <div class="author__container">
-  <% if (url = model.try(:default_avatar_url)).present? %>
-    <%= content_tag :span, class: "author__avatar-container" do %>
-      <%= image_tag url, alt: t("decidim.author.avatar", name: decidim_sanitize(author_name)) %>
-    <% end %>
+  <%= content_tag :span, class: "author__avatar-container" do %>
+    <%= image_tag avatar_url, alt: t("decidim.author.avatar", name: t("unnamed_user", scope: "decidim.privacy.private_account")) %>
   <% end %>
 
   <span class="author__name">
-    <%= decidim_sanitize author_name %>
+    <%= t("unnamed_user", scope: "decidim.privacy.private_account") %>
   </span>
 </div>
