--- a/app/views/decidim/privacy/privacy_block.html.erb
+++ b/app/views/decidim/privacy/privacy_block.html.erb
@@ -6,7 +6,7 @@
     <p class="help-text pb-8">
       <%= t("decidim.privacy.privacy_block.anonymous.content_html") %>
     </p>
-    <div class="form__wrapper-block flex justify-center">
+    <div class="flex justify-center mb-4">
       <button class="button button__sm md:button__lg button__secondary mx-auto" data-dialog-open="anonymityModal" data-redirect-url=<%= request.original_url %>>
         <%= t("decidim.privacy.privacy_block.anonymous.button") %>
       </button>
@@ -20,7 +20,7 @@
     <p class="help-text pb-8">
       <%= t("decidim.privacy.privacy_block.private.content_html") %>
     </p>
-    <div class="form__wrapper-block flex justify-center">
+    <div class="flex justify-center mb-4">
       <button class="button button__sm md:button__lg button__secondary mx-auto" data-dialog-open="publishAccountModal" data-redirect-url=<%= request.original_url %>>
         <%= t("decidim.privacy.privacy_block.private.button") %>
       </button>
