Fix account_spec / Fix settings page checkbox state

--- a/app/views/decidim/privacy/privacy_settings/show.html.erb
+++ b/app/views/decidim/privacy/privacy_settings/show.html.erb
@@ -14,7 +14,7 @@
             <span>
               <input type="hidden" name="anonymity" value="false">
               <input
-                <%== %(checked="checked") if @privacy_settings.anonymity == "on" %>
+                <%== %(checked="checked") if ActiveModel::Type::Boolean.new.cast(@privacy_settings.anonymity) %>
                 id="anonymity"
                 type="checkbox"
                 name="anonymity"
