Fix system tests

--- a/app/views/decidim/privacy/message_block.html.erb
+++ b/app/views/decidim/privacy/message_block.html.erb
@@ -5,7 +5,7 @@
   <p class="help-text pb-8">
     <%= t(".content_html") %>
   </p>
-  <div class="form__wrapper-block flex justify-center">
+  <div class="flex justify-center mb-4">
     <%= link_to t(".back"), :back, class: "border border-secondary rounded hover:bg-secondary text-secondary hover:text-white px-4 py-1.5 font-semibold mx-auto" %>
   </div>
 </div>
