--- a/app/cells/decidim/privacy/anonymity_modal/show.erb
+++ b/app/cells/decidim/privacy/anonymity_modal/show.erb
@@ -13,7 +13,7 @@
         </div>
         <div data-dialog-actions>
           <div class="inline">
-            <button id="publicize" class="button button__sm md:button__lg button__transparent-secondary" type="button">
+            <button id="publicize" class="button button__text-secondary" type="button">
               <%= t("publicize", scope: "decidim.privacy.partials.anonymity_prompt")%>
             </button>
           </div>
